--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/node": "^22.15.29",
+    "@types/yargs": "^17.0.33",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "yargs": "^18.0.0-candidate.7"
   }
 }
